--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,50 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
+  text-align: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin-top: 50px;
+  font-weight: bolder;
+  font-size: 3rem;
+}
+
+h1 {
+  color: white;
+  font-size: 3rem;
+}
+
+div {
+  max-width: 70%;
+  margin: auto;
+  background-color: black;
+  padding: 50px 10px;
+  border: none;
+  box-shadow: 10px 0px 30px 40px rgb(0, 0, 0);
+}
+
+button {
+  border: none;
+  border-radius: 20px;
+  padding: 10px 20px;
+  background-color: #00ffff;
+  margin-top: 30px;
+  font-weight: bolder;
+}
+
+input {
+  border: none;
+  padding: 10px 20px;
+}
+
+input:focus {
+  outline: none;
+  border: none;
+}
+
+p {
+  color: red;
+  margin-top: 40px;
 }
